--- a/contact.htm
+++ b/contact.htm
@@ -20,7 +20,7 @@
 
     <nav class="site-header sticky-top py-1">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2" href="./cover.htm">
+        <a class="py-2" href="./index.htm">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
         </a>
         <a class="py-2 d-none d-md-inline-block" href="./home.htm">Home</a>
@@ -77,7 +77,7 @@
         <div class="col-6 col-md">
           <h5>Features</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="./cover.htm">First page</a></li>
+            <li><a class="text-muted" href="./index.htm">First page</a></li>
             <li><a class="text-muted" href="./home.htm">Home</a></li>
             <li><a class="text-muted" href="./team.htm">Team</a></li>
             <li><a class="text-muted" href="./contact.htm">Contact</a></li>
